--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal 'screen-256color'
+source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 # Reload config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
