added nerdtree-git config in vimrc and plugin in init.toml

--- a/init.toml
+++ b/init.toml
@@ -99,6 +99,10 @@ name = 'scrooloose/nerdtree'
 marged = 0
 
 [[custom_plugins]]
+name = 'Xuyuanp/nerdtree-git-plugin' 
+marged = 0
+
+[[custom_plugins]]
 name = 'garbas/vim-snipmate'
 marged = 0
 
